# SSPP_Sparse_Matrix_CUDA

./: .gitignore  CMakeLists.txt  README.md  env.sh
output/: adder_dcop_32.ppm  cage4.ppm  can_24.ppm  mcfe.ppm  olm1000.ppm
src/: CMakeLists.txt  csr.cpp  csr.h  ellpack.cpp  ellpack.h  main.py  mainCuda.py  make.py  makeCuda.py  matrix.cpp  matrix.h
src/CUDA/: CMakeLists.txt  C_mv1DB_1DG.cu  C_mv1DB_1DG_2H.cu  C_mv1DB_1DG_4H.cu  C_mv2DB_1DG.cu  C_mv2DB_1DG_2H.cu  C_mv2DB_1DG_4H.cu  E_mv1DB_1DG.cu  E_mv1DB_1DG_2H.cu  E_mv1DB_1DG_4H.cu  E_mv1Thread.cu  E_mv1ThreadT.cu  E_mv1ThreadT_2H.cu  E_mv1ThreadT_4H.cu  E_mv2DB_1DG.cu  E_mv2DB_1DG_2H.cu  E_mv2DB_1DG_4H.cu
src/OLD_mmio/: mmio.c  mmio.h
src/OMP/: CMakeLists.txt  C_mvSerial.cpp  C_mvUnroll16H.cpp  C_mvUnroll2H.cpp  C_mvUnroll2V.cpp  C_mvUnroll4H.cpp  C_mvUnroll4V.cpp  C_mvUnroll8H.cpp  C_mvUnroll8V.cpp  E_mvSerial.cpp  E_mvUnroll16H.cpp  E_mvUnroll2H.cpp  E_mvUnroll2V.cpp  E_mvUnroll4H.cpp  E_mvUnroll4V.cpp  E_mvUnroll8H.cpp  E_mvUnroll8V.cpp
src/wtime/: wtime.cpp  wtime.h
