#/***********************************************************************
#*  This code is part of the Small Scale Parallel Programming Assignment
#*
#* SS Assignment
#* Author:  Simeon FEREZ S392371
#* Date:    February-2023
#***********************************************************************/

add_executable(SS_Assignement test.cpp csr.h csr.cpp matrix.cpp matrix.h ellpack.cpp ellpack.h)